Make sure colors have nice contrast

--- a/themes/nanika/static/css/style.css
+++ b/themes/nanika/static/css/style.css
@@ -2,7 +2,7 @@
     --bg-color: #fff;
     --fg-color: #000;
     --shade-color: #efefef;
-    --footer-color: #777;
+    --footer-color: #595959;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -10,7 +10,7 @@
         --bg-color: #111;
         --fg-color: #fff;
         --shade-color: #222;
-        --footer-color: #555;
+        --footer-color: #9e9e9e;
     }
 }
 
